--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.6",
+    "react-sortable-hoc": "^0.6.8",
     "redux": "^3.7.2"
   }
 }
