--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.6",
     "react-sortable-hoc": "^0.6.8",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-promise": "^0.5.3"
   }
 }
