--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Tim Zeng",
@@ -19,11 +19,19 @@
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.2",
+    "jest": "^21.2.1",
+    "moxios": "^0.4.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^16.0.0",
+    "redux-mock-store": "^1.3.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
