--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-15": "^1.0.2",
+    "enzyme-to-json": "^3.1.4",
     "jest": "^21.2.1",
     "moxios": "^0.4.0",
     "react-addons-test-utils": "^15.6.2",
